--- a/composer.json
+++ b/composer.json
@@ -78,6 +78,7 @@
         }
     },
     "require-dev": {
+        "phpstan/phpstan": "^0.12.92",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "^5.3",
         "symfony/css-selector": "^5.3",
